--- a/02_Functions.ipynb
+++ b/02_Functions.ipynb
@@ -15,8 +15,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-07T09:04:29.935222200Z",
-     "start_time": "2025-07-07T09:04:29.811881Z"
+     "end_time": "2025-08-22T14:11:09.040771Z",
+     "start_time": "2025-08-22T14:11:08.941517Z"
     }
    },
    "source": [
@@ -33,11 +33,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, Gina! Your age is 33.\r\n"
+      "Hello, Gina! Your age is 33.\n"
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {},
